--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      entrypoint: ["/entrypoint.sh"]
     container_name: django_ou_job
 #    restart: always
     environment:
