--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       - ./:/jobPortal
     ports:
       - "8000:8000"
+    env_file:
+      - .env  # Bao gồm tệp .env cho các biến môi trường
     depends_on:
       - mysql
       - redis
