--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ djangorestframework==3.15.1
 drf-spectacular==0.27.2
 drf-yasg==1.21.7
 filters==1.3.2
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.7
 incremental==24.7.2
